apps/synapse/base/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse-psql
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "synapse-psql"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: synapse-psql
          image: postgres:12.3
          ports:
            - containerPort: 5432
              name: psql
          volumeMounts:
            - name: synapse-psql-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: synapse-psql-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName:
        resources:
          requests:
            storage: 100M
