apps/synapse/base/synapse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
spec:
  selector:
    matchLabels:
      app: synapse
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:v1.49.2
          ports:
            - containerPort: 8008
              name: synapse
          volumeMounts:
            - name: synapse-config
              mountPath: /data/conf.d
              readOnly: true
            - name: synapse-data
              mountPath: /data
              readOnly: true
      volumes:
        - name: synapse-config
          projected:
            sources:
              - configMap:
                  name: synapse-configmap
              - secret:
                  name: synapse-config-secrets
        - name: synapse-data
          projected:
            sources:
              - configMap:
                  name: synapse-logging-config-map
              - secret:
                  name: synapse-data-secrets
