apps/synapse/base/synapse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-Host: example.com";
spec:
  rules:
    - host: synapse.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: synapse
                port: 
                  # example using port name
                  name: synapse
#         - path: /_matrix_media
#           pathType: Prefix
#           backend:
#             service:
#               name: matrixmediarepo
#               port:
#                 # example using port number
#                 number: 8000
